--- a/camaracomercio/camara/template/vista_publica/convenios.html
+++ b/camaracomercio/camara/template/vista_publica/convenios.html
@@ -1,4 +1,4 @@
-v{% extends "master.html" %}
+{% extends "master.html" %}
 {% load static %}
 {% block title %}Convenios Públicos{% endblock %}
 {% block content %}
