--- a/camaracomercio/camara/template/vista_socio_registrado/home.html
+++ b/camaracomercio/camara/template/vista_socio_registrado/home.html
@@ -38,9 +38,9 @@
         </div>
         <div class="col-md-6">
             <div class="dashboard-card mb-4">
-                <h3>Convenios</h3>
-                <p>Accede a los convenios exclusivos para socios.</p>
-                <a href="{% url 'convenios' %}" class="btn btn-primary mt-2">Ver convenios</a>
+                <h3>Mis Empresas</h3>
+                <p>Consulta y gestiona las empresas que tienes registradas.</p>
+                <a href="{% url 'mis_empresas' %}" class="btn btn-primary mt-2">Ver mis empresas</a>
             </div>
         </div>
     </div>
