--- a/camaracomercio/camara/template/adminview/convenio_edit.html
+++ b/camaracomercio/camara/template/adminview/convenio_edit.html
@@ -1,20 +1,20 @@
 {% extends "master.html" %}
 {% load static %}
-{% block title %}{{ accion }} Convenio{% endblock %}
+{% block title %}Editar Convenio{% endblock %}
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/admin.css' %}">
+<link rel="stylesheet" href="{% static 'css/Formularios.css' %}">
 {% endblock %}
 {% block content %}
 <div class="convenio-card">
-    <h1>{{ accion }} Convenio</h1>
+    <h1>Editar Convenio</h1>
     <div class="convenio-divider"></div>
     <form method="post" enctype="multipart/form-data" id="registro-form">
         {% csrf_token %}
         {{ form.non_field_errors }}
         {{ form.as_p }}
-        <button type="submit" class="convenio-btn w-100">{{ accion }}</button>
+        <button type="submit" class="convenio-btn w-100">Guardar cambios</button>
         <a href="{% url 'admin_convenios_list' %}" class="btn convenio-cancel w-100">Cancelar</a>
     </form>
 </div>
 {% endblock %}
- 
